--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Select ONE Additional
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Unit 11 Project</title>
+    <title>Project 11 and the Beach</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
     <style></style>
@@ -27,7 +27,7 @@ Select ONE Additional
   <body>
     <div class="container">
       <div>
-        <h2 id="end">🍂🌼🌞⛄ | My Favorite Season</h2>
+        <h2 id="end">🌊🚤🌊🚤| What You Find At A Beach</h2>
         <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
       </div>
     </div>
